# UnityUWSIM

./: .gitignore  README.md
Assets/: Cirtesu.unity  IdLabelConfig.asset  Rov.cs  RovControls.cs  RovControls.inputactions  docking_station_object.x_t  msgbrowser_settings.asset  scenarioConfiguration.json  untitled.blend  untitled.fbx
Assets/Cirtesu/: GameObject Profile.asset  Sky and Fog Settings.asset
Assets/Concrete textures pack/pattern 01/: Concrete pattern 01.mat
Assets/Concrete textures pack/pattern 05/: Concrete pattern 05.mat
Assets/Concrete textures pack/pattern 10/: Concrete pattern 10.mat
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Scripts/: BlueRovCameraRosPublisher.cs  BlueRovCmdVelocityRosSubscriber.cs  BlueRovVelocityControl.cs  CameraCapturer.cs  Clock.cs  ImuSubscriber.cs  MyCameraPublisher.txt  PoseEstimationScenario.cs  ROSCameraDataPublisher.cs  ROSClockPublisher.cs  Readme  SimpleCameraController.cs  TimeStamp.txt
Assets/Settings/: HDRP Balanced.asset  HDRP High Fidelity.asset  HDRP Performant.asset  SkyandFogSettingsProfile.asset
Assets/URDFs/: Black_material.mat  Blue_material.mat  Red_material.mat  Yellow_material.mat  transparent.mat
Assets/URDFs/dock_station/aruco_marker/aruco_marker/: package.xml
Assets/URDFs/dock_station/aruco_marker/aruco_marker/meshes/: base_link.STL  base_link_0.asset  base_link_1.asset
ProjectSettings/: DynamicsManager.asset  EditorSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
scripts/: .clang-format  format-all.sh
(+714 files in other folders)
